fix alignment

--- a/addon/styles/addon.less
+++ b/addon/styles/addon.less
@@ -413,6 +413,7 @@
   margin-top: -2px;
   .et-toggle-icon {
     padding-left: 0;
+    padding-top: 3px;
     opacity: 1;
     transform: rotate(-90deg);
   }
